# travis-pogodi

./: .travis.yml  CHANGELOG.md  README.md  travis-pogodi.cabal
doc/: CHANGELOG.md
src/: Runner.hs
src/Runner/: Cli.hs
