name:                travis-pogodi
version:             0.1.0.0
synopsis:            A better travis_wait
homepage:            https://github.com/4e6/travis-pogodi#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Bushev
maintainer:          bushevdv@gmail.com
category:            Development, Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable travis-pogodi
  hs-source-dirs:      travis-pogodi
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , travis-pogodi
  default-language:    Haskell2010

test-suite travis-pogodi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , travis-pogodi
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/4e6/travis-pogodi
